bgo1-test/drupal-test2/httpd-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: httpd
  template:
    metadata:
      labels:
        app: httpd
    spec:
      containers:
      - name: httpd
        image: uitcontainerregistry.azurecr.io/uit/httpd
        ports:
        - containerPort: 80
