bgo1-test/drupal-test2/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpd
  labels:
    app: httpd
spec:
  selector:
    app: httpd
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
  type: ClusterIP
