bgo1-test/drupal-test2/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ${app_name}-nginx
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: ${app_name}-nginx
      app.kubernetes.io/instance: ${app_name}-nginx
  policyTypes:
  - Ingress
  ingress:
  - ports:
    - port: http
    from:
